# MILD

./: .gitignore  CMakeLists.txt  frame.cpp  frame.h  main.cpp  mild-config.cmake.in
MILD/: BayesianFilter.hpp  loop_closure_detector.cpp  loop_closure_detector.h  mild.hpp  sparse_match.cpp  sparse_match.h
example/: CMakeLists.txt  frame.h  global.h  main.cpp  settings.yaml
lib/: CMakeLists.txt
lib/include/MILD/: BayesianFilter.hpp  lightweight_vector.hpp  mild.hpp
lib/src/: loop_closure_detector.cpp
matlab/: evaluation.m
mvg/: CMakeLists.txt  main.cpp
old/: sparse_match.cpp  sparse_match.h
python/: plot.py
